--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="0; url=https://github.com/pysoc/PySOC.github.io/wiki/" />
   <meta charset="utf-8">
-
   <title>PySOC</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-There will be some tutorials and stuff here, maybe a wiki?
+Public wiki: https://github.com/pysoc/PySOC.github.io/wiki
   <script src="js/scripts.js"></script>
 </body>
 </html>
